Adjust floating icons position avoid overlapping

--- a/src/components/nvfLogo/NvfLogo.styles.scss
+++ b/src/components/nvfLogo/NvfLogo.styles.scss
@@ -51,7 +51,7 @@
   }
 
   @media (max-width: 768px) {
-    bottom: var(--spacing-lg);
+    bottom: calc(var(--spacing-3xl) + var(--spacing-xl)); /* Lower position to avoid footer overlap */
     left: var(--spacing-lg);
     width: 50px;
     height: 50px;
